clean up template (full-width)

--- a/views/layouts/full-width.ejs
+++ b/views/layouts/full-width.ejs
@@ -21,17 +21,17 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-8 p-0 m-0">
+            <div class="col-sm p-0 m-0">
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-3 bg-primary">
+                        <div class="col-sm-2 bg-primary">
                             <h2>TOC</h2>
                         </div>
-                        <div class="col-sm m-0">
-                            <div class="container">
+                        <div class="col-sm p-0">
+                            <div class="container bg-warning">
                                 <%- include('../partials/nav1.ejs') %>
                             </div>
-                            <div class="col-sm">
+                            <div class="col-sm m-0">
                                 <main>
                                     <%- body %>
                                 </main>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm bg-primary">
+            <div class="col-sm bg-primary m-0">
                 <%- include('../partials/footer.ejs') %>
             </div>
         </div>
