--- a/views/partials/nav1.ejs
+++ b/views/partials/nav1.ejs
@@ -1,6 +1,10 @@
-<nav class="text-center bg-warning width=100%">
+<nav>
     <a href="/">Home</a>
     <a href="/page1">page1</a>
     <a href="/page2">page2</a>
     <a href="/page3">page3</a>
+    <div class="nav-right">
+        Welcome:
+        <a href="/">Login</a>
+    </div>
 </nav>
